added support for some mobile things and added multiqc link in reporting

--- a/pipeline_webpage/index.html
+++ b/pipeline_webpage/index.html
@@ -50,7 +50,7 @@
             <div id="menu" class="menu" style="display:none">
 
                 <div class="menu-child">
-                    <button id="pipeline" class="card" onclick="switchToPipelineView()" onmouseover="dimmer()" onmouseout="brightner()">
+                    <button id="pipeline" class="card" onclick="switchToPipelineView()" onmouseover="dimmer()" onmouseout="brightner()" ontouchstart="dimmer()" ontouchend="brightner()">
                         Pipeline
                         <span>
                             <br/>
@@ -60,7 +60,7 @@
                 </div>
 
                 <div class="menu-child">
-                    <button id="report" class="card" onclick="switchToReportView()" onmouseover="dimmer()" onmouseout="brightner()">
+                    <button id="report" class="card" onclick="switchToReportView()" onmouseover="dimmer()" onmouseout="brightner()" ontouchstart="dimmer()" ontouchend="brightner()">
                         Reporting
                         <span>
                             <br/>
@@ -70,7 +70,7 @@
                 </div>
                 
                 <div class="menu-child">
-                    <button id="documentation"  class="card" onclick="switchToDocumentationView()" onmouseover="dimmer()" onmouseout="brightner()">
+                    <button id="documentation"  class="card" onclick="switchToDocumentationView()" onmouseover="dimmer()" onmouseout="brightner()" ontouchstart="dimmer()" ontouchend="brightner()">
                         Documentation
                         <span>
                             <br/>
@@ -80,7 +80,7 @@
                 </div>
 
                 <div class="menu-child">
-                    <button id="test" class="card" onclick="testView()" onmouseover="dimmer()" onmouseout="brightner()">
+                    <button id="test" class="card" onclick="testView()" onmouseover="dimmer()" onmouseout="brightner()" ontouchstart="dimmer()" ontouchend="brightner()">
                         TEST
                         <span>
                             <br/>
