added request mailto

--- a/pipeline_webpage/index.html
+++ b/pipeline_webpage/index.html
@@ -71,10 +71,9 @@
                         <div class="request-access-container">
                             <div class="request-access-box-shadow"></div>
                             <div id="request_access_box" class="request-access-box">
-                                <input type="text" placeholder="Username"/><br/>
-                                <input type="password" placeholder="Password"/><br/>
-                                <input type="email" placeholder="gator@ufl.edu"/><br/>
-                                <button>Request</button>
+                                <input id="request_user" type="text" placeholder="Username"/><br/>
+                                <input id="request_email" type="email" placeholder="gator@ufl.edu"/><br/>
+                                <button onclick="request_login()">Request</button>
                             </div>
                         </div>
                     </div>
